2013-March-26 Struan Robertson

	* MolecularComponents.cpp/.h, HinderedRotorQM1D.cpp: Implementation 
	of Sharma, Raman and Green algorithm for the elimination of internal 
	rotational mode frequencies.
	
2013-March-19 Struan Robertson

	* MolecularComponents.cpp/.h: Hessian rotational projection added.
	
2013-March-11 Struan Robertson

	* MolecularComponents.cpp/.h: Utility methods added to gStructure class.
	
2013-March-07 Struan Robertson

	* MolecularComponents.cpp/.h, HinderedRotorQM1D.cpp : Infrastructure to
	project internal rotor modes from Hessian.
	
2013-March-03 Struan Robertson

	* MolecularComponents.cpp/.h : Initial revision of method to analyse 
	a Hessain to obtain vibration frequencies.
	
2013-March-03 Struan Robertson

	* Rdouble.h/.cpp, fitting.cpp, gridsearch.cpp, Marquardt.cpp : Added methods 
	to convert fitted parameters back to original units (based on code changes 
	suggested by Robin).
	
2013-February-27 Struan Robertson

	* PriorDistribution.cpp, CollisionOperator.cpp: Minor bug fixes checked-in
	on behalf of Robin.
	
2013-February-25 Struan Robertson

	* TMatrix.h: Moved Matrix CML I/O methods from temporary class onto TMatrix.
	
2013-February-22 Chris Morley

	* src/RWmatrix.cpp,	src/RWMatrix.h: functions to read and write Hessian
	matrices to CML. These files and the RWMatrix class are temporary until
	a suitable home is found for the functions.

	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml: make experimental
	  matrix entry more CML compliant.
	* src/MolecularComponents.cpp: commented out code at line 218 to test
	  RWMatrix functions.

	* src/plugins/fitting.cpp: output hessian to XML (not fully tested)
	* src/System.cpp, src/System.h: make PersistPtr to current analysis element
	  available.

	* src/main.cpp: use throwing std::logic_error to terminate after writing
	  XML output (for debugging).

	* src/Persistence.h, src/XMLPersist.cpp, src/XMLPersist.h: correct
	  parameters of XmlWrite().

2013-February-18 Struan Robertson