@@ -1,3 +1,12 @@
+2013-March-27 Chris Morley
+	* src/MolecularComponents.cpp: transparently read hessian matrices
+	with upper or lower triangle or complete. (CML files from Gaussian
+	use upper triangle.
+
+	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml,
+	src/MolecularComponents.cpp: in dictRref use me:hessian rather
+	than me:Hessian.
+
 2013-March-26 Struan Robertson
 
 	* MolecularComponents.cpp/.h, HinderedRotorQM1D.cpp: Implementation 
